<resources>
    <string name="app_name">QR Marker</string>
    <string name="log_in">Log In</string>
    <string name="nothing_to_see_here">Nothing to see here.</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="create_organization">Create Organization</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_name_of_organization">Enter the name of the organization</string>
    <string name="create_room">Create Room</string>
    <string name="enter_name_of_room">Enter the name of the room</string>
    <string name="loading">Loading…</string>
    <string name="empty_field_error">Field can not be empty.</string>
    <string name="log_in_successful">Log in successful.</string>
    <string name="log_in_failed">Log in failed because an error occurred.</string>
    <string name="registered_successfully">Registered successfully.</string>
    <string name="registration_failed">Registration failed because an error occurred.</string>
    <string name="created_successfully">Created successfully.</string>
    <string name="creation_failed">Creation failed because an error occurred.</string>
    <string name="updated_successfully">Updated successfully.</string>
    <string name="update_failed">Update failed because an error occurred.</string>
    <string name="deleted_successfully">Deleted successfully.</string>
    <string name="deletion_failed">Deletion failed because an error occurred.</string>
    <string name="delete_org">Delete Organization</string>
    <string name="delete_org_confirm">Are you sure you want to delete this organization?</string>
    <string name="remove_assignee_confirm">Are you sure you want to remove this assignee?</string>
    <string name="delete_room">Delete Room</string>
    <string name="delete_room_confirm">Are you sure you want to delete this room?</string>
    <string name="something_went_wrong_please_drag_this_page_down_to_refresh">Something went wrong. Please drag this page down to refresh.</string>
    <string name="scan_error_message">An error occurred while trying to scan.</string>
    <string name="code_error_message">An error occurred while trying to generate code.</string>
    <string name="share_error_message">An error occurred while trying to share code.</string>
    <string name="camera_permission_required">Camera permission required.</string>
    <string name="camera_hardware_required">Camera hardware required.</string>
    <string name="unauthorized">You do not have authorized access to perform this operation.</string>
    <string name="unverified">Unverified</string>
    <string name="verified">Verified</string>
    <string name="verify">Vérifier</string>
    <string name="unverify">annuler la vérification</string>
    <string name="room_name">Room Name</string>
    <string name="status">Status</string>
    <string name="verified_at">Verified At</string>
    <string name="created_at">Created At</string>
    <string name="pending">Pending</string>
    <string name="organization_name">Organization Name</string>
    <string name="enter_email">Enter email</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone_number">Enter phone number.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="error">error</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="weak_password">Weak password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_type">User Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_log_out_title">Confirm log out</string>
    <string name="confirm_log_out_message">Are you sure you want to log out?</string>
    <string name="select_room">Select Room</string>
    <string name="assign_user">Assign User</string>
    <string name="view_assignees">View Assignees</string>
    <string name="user_assigned_message">User assigned successfully.</string>
    <string name="user_assigned_failure_message">User could not be assigned because an error occurred.</string>
    <string name="assignee_removed_message">Assignee removed successfully.</string>
    <string name="assignee_removed_failure_message">Assignee could not be removed because an error occurred.</string>
    <string name="full_name_">Full Name:</string>
    <string name="email_">Email:</string>
    <string name="type_">Type:</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="view_assignee">View Assignee</string>
    <string name="remove_assignee">Remove Assignee</string>
    <string name="verify_confirmation_plural">Verify selected rooms?</string>
    <string name="verify_confirmation_singular">Verify selected room?</string>
    <string name="unverify_confirmation_plural">Unverify selected rooms?</string>
    <string name="unverify_confirmation_singular">Unverify selected room?</string>
    <string name="verifying_empty_room_message">Please select a room to verify.</string>
    <string name="unverifying_empty_room_message">Please select a room to unverify.</string>
    <string name="enter_your_comment_here">Enter your comment here</string>
    <string name="verified_this_room_on">Verified this room on</string>
    <string name="unverified_this_room_on">Unverified this room on</string>
    <string name="dismiss">Dismiss</string>
    <string name="comment">Comment</string>
</resources>