<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <Button
                    android:id="@+id/log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/black_solid_white_stroke_curved_edges"
                    android:padding="@dimen/padding"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/big" />

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/big" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_full_name"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_phone_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <EditText
                    android:id="@+id/create_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <EditText
                    android:id="@+id/create_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/white_solid_curved_edges"
                    android:hint="@string/enter_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    android:textSize="@dimen/big" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:background="@drawable/black_solid_white_stroke_curved_edges"
                    android:padding="@dimen/padding"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/big" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/big" />
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>
</FrameLayout>