<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RoomDetails">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_bottom_grey_stroke"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/title"
            android:layout_height="@dimen/title"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verifyCon"
        android:layout_below="@+id/bar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/something_went_wrong_please_drag_this_page_down_to_refresh"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/big" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nothing_to_see_here"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/big" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_bottom_grey_stroke"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_bottom_grey_stroke"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_bottom_grey_stroke"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:id="@+id/updated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unverified"
                        android:textColor="@color/black"
                        android:textSize="@dimen/big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verified_at"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_solid_bottom_grey_stroke"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/big" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_at"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/rotating_dialog" />

            </RelativeLayout>
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/verifyCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_solid_top_grey_stroke"
        android:padding="@dimen/padding">

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_solid_black_stroke_curved_edges"
            android:padding="@dimen/padding"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/big" />
    </RelativeLayout>
</RelativeLayout>