<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".controller.activities.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_solid_bottom_grey_stroke"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/title"
            android:layout_height="@dimen/title"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_solid_grey_stroke"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/white_solid_grey_stroke"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/white_solid_grey_stroke"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/white_solid_grey_stroke"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/big" />
        </LinearLayout>

        <Button
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/white_solid_black_stroke_curved_edges"
            android:padding="@dimen/padding"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/big" />
    </LinearLayout>
</LinearLayout>